# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_normalizer"
description = "API for normalizing text into Unicode Normalization Forms"
version = "0.5.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
smallvec = "1.6"
displaydoc = { version = "0.2.3", default-features = false }
#num_enum = { version = "0.5", default_features = false }
icu_codepointtrie = { version = "0.3", path = "../../utils/codepointtrie", features = ["serde"] }
icu_provider = { version = "0.5", path = "../../provider/core", features = ["macros"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
zerovec = { version = "0.6", path = "../../utils/zerovec", features = ["serde"] }
icu_uniset = { version = "0.4", path = "../../utils/uniset", features = ["serde"] }
icu_properties = { version = "0.5", path = "../../components/properties" }
utf8_iter = "1.0"

[dev-dependencies]
#criterion = "0.3"
#icu = { path = "../icu", default-features = false }
#icu_benchmark_macros = { version = "0.3", path = "../../tools/benchmark/macros" }
#icu_provider = { version = "0.3", path = "../../provider/core" }
icu_testdata = { version = "0.5", path = "../../provider/testdata", features = ["static"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#bincode = "1.3"

[lib]
path = "src/lib.rs"
bench = false  # This option is required for Benchmark CI

[features]
default = []
serde = ["dep:serde", "zerovec/serde"]
datagen = ["serde", "zerovec/serde_serialize"]
